infra/base/networking/network-policies/allow-cloudflared.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-cloudflared
  namespace: todde
spec:
  podSelector:
    matchLabels:
      app: cloudflared
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
