infra/base/networking/network-policies/allow-forge-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-forge-frontend
  namespace: todde
spec:
  podSelector:
    matchLabels:
      app: forge-frontend
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: ingress-nginx
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
