infra/base/networking/network-policies/allow-forge-ingestor.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-forge-ingestor
  namespace: todde
spec:
  podSelector:
    matchLabels:
      app: forge-ingestor
  policyTypes:
    - Ingress
    - Egress
  egress:
    - {}
